force-app/main/default/objects/MetadataFile__c/MetadataFile__c.object-meta.xml
<CustomObject>
    <label>Metadata File</label>
    <nameField>
        <label>File Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Metadata Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>