force-app/main/default/objects/MetadataFile__c/fields/IsDestructive__c.field-meta.xml
<CustomField>
    <fullName>IsDestructive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when this tracked piece of metadata is destructive</description>
    <inlineHelpText>Checked when this tracked piece of metadata is destructive</inlineHelpText>
    <label>Destructive</label>
    <type>Checkbox</type>
</CustomField>