force-app/main/default/objects/MetadataFile__c/fields/LastTrackedDate__c.field-meta.xml
<CustomField>
    <fullName>LastTrackedDate__c</fullName>
    <description>The last time that this piece of metadata was tracked</description>
    <inlineHelpText>The last time that this piece of metadata was tracked</inlineHelpText>
    <label>Last Tracked Date</label>
    <type>Date</type>
</CustomField>