force-app/main/default/objects/MetadataFile__c/fields/PackageFormatting__c.field-meta.xml
<CustomField>
    <fullName>PackageFormatting__c</fullName>
    <formula>&quot;&lt;members&gt;&quot; + Name + &quot;&lt;/members&gt;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Package Formatting</label>
    <type>Text</type>
</CustomField>